[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -14,7 +14,9 @@ cookies.deleteSelected=Tem certeza de que deseja excluir os cookies selecionados
 cookies.deleteSelectedTitle=Remover Cookies selecionados
 
 # permissions
+perm.allowXULXBL.label=Usar marcação XUL/XBL
 perm.cookie.label=Definir Cookies
+perm.falsestart-rc4.label=Início falso do TLS usando RC4
 perm.geo.label=Compartilhar localização
 perm.image.label=Carregar imagens
 perm.indexedDB.label=Armazenar bancos de dados locais
@@ -26,13 +28,17 @@ perm.plugins.label=Ativar plugins
 perm.popup.label=Abrir janelas popup
 perm.script.label=Executar scripts
 perm.stylesheet.label=Carregar folhas de estilo
+perm.sts/use.label=Usar segurança rigorosa de transporte
+perm.sts/subd.label=Aplicar segurança rigorosa de transporte em subdomínios
 perm.trackingprotection.label=Registrando atividade
 
 perm.type.default=Selecione um tipo
 
 # passwords
 pwd.hidePasswords=Esconder senhas
+pwd.hidePasswords.accesskey=P
 pwd.showPasswords=Exibir senhas
+pwd.showPasswords.accesskey=s
 pwd.noMasterPasswordPrompt=Tem certeza que deseja exibir suas senhas?
 
 pwd.deleteSelected=Tem certeza de que deseja excluir as senhas selecionadas?
@@ -53,6 +59,7 @@ storageUsage=%1$S %2$S
 storage.deleteSelectedTitle=Remover armazenamentos selecionados
 
 # form data
+fdata.deleteSelectedTitle=Remover dados de formulários selecionados
 
 # forget
 forget.desc.domain.pre=Esquecer todos os dados dos seguintes tipos associados ao domínio "%S":
