--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -64,8 +64,11 @@ xpinstallDisabledButton.accesskey=A
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/Localization_and_Plurals
 # The number of add-ons is not itself substituted in the string.
+addonDownloadCancelled=Download de complemento cancelado.;Download de complementos cancelados.
 addonDownloadCancelButton=Cancelar
+addonDownloadCancelButton.accesskey=C
 addonDownloadRestartButton=Reiniciar
+addonDownloadRestartButton.accesskey=R
 
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
 # Semi-colon list of plural forms. See:
@@ -76,6 +79,7 @@ addonsInstalledNeedsRestart=O #1 será instalado após o #3 ser reiniciado.;#2 c
 addonInstallRestartButton=Reiniciar agora
 addonInstallRestartButton.accesskey=R
 addonInstallManageButton=Abrir gerenciador de complementos
+addonInstallManageButton.accesskey=A
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #2 is the host name, #3 is the application name
@@ -91,10 +95,13 @@ addonErrorIncompatible=O #1 não pôde ser instalado por não ser compatível co
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
 lwthemeInstallRequest.message=Este site (%S) tentou instalar um tema. Clique em aceitar para continuar.
+lwthemeInstallRequest.allowButton.accesskey=P
 
 lwthemeInstallNotification.message=Um novo tema foi instalado.
 lwthemeInstallNotification.undoButton=Desfazer
+lwthemeInstallNotification.undoButton.accesskey=D
 lwthemeInstallNotification.manageButton=Gerenciar temas…
+lwthemeInstallNotification.manageButton.accesskey=G
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
@@ -108,6 +115,8 @@ lwthemeNeedsRestart.restartButton.accesskey=R
 #if this doesn't work for your language, use explicit Share or Allow/Block.
 geolocation.shareLocation=Compartilhar localização
 geolocation.shareLocation.accesskey=a
+geolocation.dontShareThisRequest=Não para esta solicitação
+geolocation.dontShareThisRequest.accesskey=o
 geolocation.alwaysShareForSite=Sempre para este site
 geolocation.alwaysShareForSite.accesskey=A
 geolocation.neverShareForSite=Nunca para este site
@@ -162,6 +171,8 @@ updatePromptCheckButton.label=Verificar atualizações
 updatePromptCheckButton.accesskey=V
 
 SecurityTitle=Alerta de segurança
+BlockedTrackingContentMessage=Partes da página que rastreiam suas atividades on-line foram bloqueadas.
+BlockedDisplayContentMessage=Informações descriptogradas nesta página foram bloqueadas.
 SecurityPreferences.label=Preferências
 SecurityPreferences.accesskey=P
 PostToInsecureContinue=Continuar
