--- a/pt-BR/suite/chrome/mailnews/vCardImportMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/vCardImportMsgs.properties
@@ -7,11 +7,15 @@
 # informational messages
 #
 
+vCardImportName=Arquivo vCard (.vcf)
 
+vCardImportDescription=Importar um catálogo de endereços com formato vCard
 
+vCardImportAddressName=Livro de endereços vCard
 
 # LOCALIZATION NOTE (vCardImportAddressSuccess): %S is replaced by the
 # name of the address book being imported.
+vCardImportAddressSuccess=Importar catálogo de endereços %S
 
 # LOCALIZATION NOTE (vCardImportAddressSuccess): %S is replaced by the
 # name of the address book being imported.
@@ -19,3 +23,4 @@ vCardImportAddressBadSourceFile=Erro ao acessar o arquivo do catálogo de endere
 
 # LOCALIZATION NOTE (vCardImportAddressSuccess): %S is replaced by the
 # name of the address book being imported.
+vCardImportAddressConvertError=Erro ao importar o catálogo de endereços %S, alguns endereços podem não ter sido importados.
