--- a/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
+++ b/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
@@ -17,6 +17,7 @@ blocked=Bloqueado
 # %% will appear as a single % sign, so %2$S%% is the percent number plus the % sign
 # examples: 2% of 1 file - Download Manager; 22% of 11 files - Download Manager
 downloadsTitleFiles=%1$S arquivo - Gerenciador de downloads;%1$S arquivos - Gerenciador de downloads
+downloadsTitlePercent=%2$S%% de %1$S arquivo - Gerenciador de downloads;%2$S%% de %1$S arquivos - Gerenciador de downloads
 
 # LOCALIZATION NOTE (progressTitle):
 # %1$S is the file name, %2$S is the download state
