--- a/pt-BR/suite/chrome/common/feeds/subscribe.properties
+++ b/pt-BR/suite/chrome/common/feeds/subscribe.properties
@@ -5,6 +5,7 @@
 linkTitleTextFormat=Ir para %S
 addHandler=Adicionar "%S" (%S) como um leitor de RSS?
 addHandlerAddButton=Adicionar leitor de RSS
+addHandlerAddButtonAccesskey=A
 handlerRegistered="%S" já está registrado como um leitor RSS
 subscribeNow=Inscrever-se agora
 chooseApplicationMenuItem=Escolher aplicativo…
@@ -48,3 +49,4 @@ feedSubscriptionVideoPodcast2=Você pode inscrever este videocast em um leitor p
 addProtocolHandler=Deseja adicionar o %S (%S) como um aplicativo para endereços “%S”?
 addProtocolHandlerAddButton=Adicionar aplicativo
 # "%appName has already been added as an application for %protocolType links."
+protocolHandlerRegistered=O %S já foi adicionado como um aplicativo para links %S.
