[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -63,3 +63,6 @@ fdata.deleteSelectedTitle=Remover dados de formulários selecionados
 
 # forget
 forget.desc.domain.pre=Esquecer todos os dados dos seguintes tipos associados ao domínio "%S":
+forget.desc.domain.post=Todos os dados associados com o domínio "%S" dos seguintes tipos serão excluídos:
+forget.desc.global.pre=Esquecer sobre todos os dados globais dos seguintes tipos:
+forget.desc.global.post=Todos os dados globais dos seguintes tipos serão deletados:
