--- a/pt-BR/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/pt-BR/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -83,6 +83,7 @@ emptyEmailAddCard=Você não pode adicionar um cartão que não tem endereço de
 emptyEmailAddCardTitle=Impossível adicionar contato
 addressBook=Catálogo de Endereços
 
+browsePhoto=Foto do contato
 
 # mailnews.js
 ldap_2.servers.pab.description=Catálogo Pessoal
@@ -104,10 +105,12 @@ matchesFound=%S contatos encontrados
 ## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
 ## %1$S is the number of contacts that were copied. This should be used multiple
 ## times wherever you need it. Do not replace by %S.
+contactsCopied=%1$S contato copiado;%1$S contatos copiados
 
 ## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
 ## %1$S is the number of contacts that were moved. This should be used multiple
 ## times wherever you need it. Do not replace by %S.
+contactsMoved=%1$S contato movido;%1$S contatos movidos
 
 # LDAP directory stuff
 invalidName=Por favor, forneça um nome válido.
@@ -122,6 +125,7 @@ ExportAddressBookTitle=Exportar catálogo de endereços
 LDIFFiles=LDIF (*.ldi,*.ldif)
 CSVFiles=Separado por vírgulas (*.csv)
 TABFiles=Delimitados por tabulações (*.tab,*.txt)
+VCFFiles=vCard
 failedToExportTitle=Falha na exportação
 failedToExportMessageNoDeviceSpace=Falha na exportação do catálogo de endereços. Não há espaço livre no dispositivo.
 failedToExportMessageFileAccessDenied=Falha na exportação do catálogo de endereços. O acesso ao arquivo foi negado.
