--- a/pt-BR/suite/chrome/mailnews/messenger.properties
+++ b/pt-BR/suite/chrome/mailnews/messenger.properties
@@ -7,20 +7,22 @@
 #LOCALIZATION NOTE(statusMessage): Do not translate the words
 # $1S and $2S below. Place the word $1S where account name should appear and $2S
 # where the status message should appear.
+statusMessage=%1$S: %2$S
 
-renameFolder=Renomear pasta...
+renameFolder=Renomear pasta…
 compactFolder=Otimizar esta pasta
-removeAccount=Excluir conta...
-removeFolder=Excluir pasta...
-newFolderMenuItem=Pasta...
-newSubfolderMenuItem=Subpasta...
-newFolder=Nova pasta...
-newSubfolder=Nova pasta...
+removeAccount=Excluir conta…
+removeFolder=Excluir pasta
+newFolderMenuItem=Pasta…
+newSubfolderMenuItem=Subpasta…
+newFolder=Nova pasta…
+newSubfolder=Nova pasta…
 folderProperties=Propriedades da pasta
 getMessages=Obter mensagens
 getMessagesFor=Obter mensagens para a conta
 # LOCALIZATION NOTE (getNextNewsMessages): Semi-colon list of plural forms.
 # #1 is the number of news messages to get.
+getNextNewsMessages=Receber próxima mensagem;Receber próximas #1 mensagens
 advanceNextPrompt=Avançar para a próxima mensagem não lida em %S?
 titleNewsPreHost=- Servidor
 titleMailPreHost=- Identidade
@@ -34,10 +36,13 @@ defaultSaveMessageAsFileName=Mensagem.eml
 SaveMailAs=Salvar mensagem como
 SaveAttachment=Salvar anexo
 SaveAllAttachments=Salvar os anexos nesta pasta:
+ChooseFolder=Escolher pasta
 LoadingMessageToPrint=Carregando mensagem para imprimir...
 MessageLoaded=Mensagens carregadas...
 PrintingMessage=Imprimindo mensagem...
 PrintPreviewMessage=Visualizando impressão da mensagem...
+PrintingContact=Imprimindo contato…
+PrintPreviewContact=Visualizando impressão do contato…
 PrintingAddrBook=Imprimindo catálogo de endereços...
 PrintPreviewAddrBook=Visualizando impressão do catálogo de endereços...
 PrintingComplete=Concluído.
@@ -105,6 +110,13 @@ smtpServers-confirmServerDeletionTitle=Excluir servidor
 smtpServers-confirmServerDeletion=Tem certeza de que deseja excluir o servidor: \n %S?
 
 # Account Settings - Both Incoming and SMTP server
+authOld=Senha, método original (inseguro)
+authPasswordEncrypted=Senha criptografada
+authKerberos=Kerberos / GSSAPI
+authExternal=Certificado TLS
+authNTLM=NTLM
+authAnySecure=Qualquer método seguro (desaconselhado)
+authAny=Qualquer método (inseguro)
 
 # LOCALIZATION NOTE(serverType-nntp): Do not translate "NNTP" in the line below
 serverType-nntp=Servidor de news (NNTP)
@@ -287,6 +299,7 @@ deleteAttachmentFailure=Falha na exclusão dos anexos selecionados.
 attachmentDisplayNameFormat=%S %S
 
 # This is the heading for the attachment summary when printing an email
+attachmentsPrintHeader=Anexos:
 
 # Connection Error Messages
 101=Erro desconhecido
@@ -309,8 +322,10 @@ macBiffNotification_messages_extra=%1$S novas mensagens de %2$S e mais %3$S.
 macBiffNotification_separator=,\u0020
 
 # LOCALIZATION NOTE(newMailNotification_message): %1$S is the name of the account %2$S is the number of new messages  
+newMailNotification_message=%1$S recebeu %2$S nova mensagem
 
 # LOCALIZATION NOTE(newMailNotification_messages): %1$S is the name of the account %2$S is the number of new messages  
+newMailNotification_messages=%1$S recebeu %2$S novas mensagens
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S de %S KB usados
@@ -387,10 +402,16 @@ processingJunkMessages=Processando mensagens de spam
 # tabmail: warning when closing multiple tabs (as in browser)
 tabs.closeWarningTitle=Fechar janela
 tabs.closeButton=Fechar
+tabs.closeWarningPromptMe=Alerte-me ao fechar várias abas.
 
 # Messenger bootstrapping messages
+fileNotFoundTitle = Arquivo não encontrado
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = O arquivo %S não existe.
 
+confirmMsgDelete.title=Confirmar exclusão
+confirmMsgDelete.collapsed.desc=Isso excluirá todas as mensagens agrupadas em tópicos. Tem certeza de que deseja continuar?
+confirmMsgDelete.deleteNoTrash.desc=Isto excluirá as mensagens imediatamente, sem salvar uma cópia na lixeira. Tem certeza que deseja continuar?
 
 # LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
 # translation where you wish to display the hostname of the server to which
