--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -50,6 +50,7 @@ pluginInfo.unknownPlugin=Desconhecido
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of popups blocked.
+popupWarning.message=O #1 preveniu este site de abrir uma janela de popup.;O #1 preveniu que este site abrisse #2 janelas de popup.
 
 xpinstallHostNotAvailable=host desconhecido
 xpinstallPromptWarning=%S previniu que este site (%S) perguntasse se deseja instalar programas no seu computador.
@@ -64,6 +65,7 @@ xpinstallDisabledButton.accesskey=A
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/Localization_and_Plurals
 # The number of add-ons is not itself substituted in the string.
+addonDownloading=Complemento sendo baixado:;Complementos sendo baixados:
 addonDownloadCancelled=Download de complemento cancelado.;Download de complementos cancelados.
 addonDownloadCancelButton=Cancelar
 addonDownloadCancelButton.accesskey=C
@@ -167,17 +169,39 @@ lockPromptInfoButton.accesskey=S
 
 # LOCALIZATION NOTE (updatePrompt.text)
 # %S will be replaced with the application name.
+updatePrompt.text=Sua cópia do %S é antiga e provavelmente possui falhas de segurança conhecidas, mas você desativou as verificações de atualização automática. Por favor, atualize para uma versão mais recente.
 updatePromptCheckButton.label=Verificar atualizações
 updatePromptCheckButton.accesskey=V
 
 SecurityTitle=Alerta de segurança
+MixedContentMessage=Você requisitou uma página criptografada que contém algumas informações não criptografadas. As informações que você visualizar ou publicar nesta página poderão ser facilmente lidas por terceiros.
+MixedActiveContentMessage=Você requisitou uma página criptografada que contém informações inseguras. As informações que você visualizar ou publicas nesta página poderão ser facilmente lidas por terceiros.
+TrackingContentMessage=Partes deste página podem estar rastreando suas atividades online.
+MixedDisplayContentMessage=Você requisitou uma página que está parcialmente criptografada e não previne a espionagem.
+BlockedActiveContentMessage=Informação insegura desta página foi bloqueada.
 BlockedTrackingContentMessage=Partes da página que rastreiam suas atividades on-line foram bloqueadas.
 BlockedDisplayContentMessage=Informações descriptogradas nesta página foram bloqueadas.
+EnterInsecureMessage=Você saiu de uma página criptograda. As informações que você enviar ou receber a partir de agora podem ser facilmente lidas por terceiros.
+EnterSecureMessage=Você requisitou uma página criptografada. O site identificou-se corretamente e as informações que você visualizar ou publicar nesta página não poderão ser facilmente lidas por terceiros.
+SecurityKeepBlocking.label=Manter Bloqueio
+SecurityKeepBlocking.accesskey=M
+SecurityUnblock.label=Desbloquear
+SecurityUnblock.accesskey=D
 SecurityPreferences.label=Preferências
 SecurityPreferences.accesskey=P
+PostToInsecureFromInsecureMessage=A informação que você inseriu está para ser enviada através de uma conexão não criptografada e poderá ser facilmente lida por terceiros.\nVocê tem certeza que deseja continuar o envio desta informação?
+PostToInsecureFromInsecureShowAgain=Alerte-me sempre que for enviar informações que não estejam criptografadas.
 PostToInsecureContinue=Continuar
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
 # it's okay for them to have the same access key.
+safebrowsing.getMeOutOfHereButton.label=Me tire daqui!
+safebrowsing.getMeOutOfHereButton.accessKey=M
+safebrowsing.reportedWebForgery=Site falso reportado!
+safebrowsing.notAForgeryButton.label=Este não é um site falso…
+safebrowsing.notAForgeryButton.accessKey=s
+safebrowsing.reportedAttackSite=Site falso reportado!
+safebrowsing.notAnAttackButton.label=Este não é um foco de ataques…
+safebrowsing.notAnAttackButton.accessKey=a
