[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/pt-BR/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -35,6 +35,8 @@ confirmDeleteMailingListTitle=Excluir lista de emails
 confirmDeleteAddressbookTitle=Excluir catálogo de endereços
 confirmDeleteAddressbook=Tem certeza de que deseja excluir o catálogo de endereços selecionado?
 confirmDeleteCollectionAddressbook=Se este catálogo de endereços for apagado, %S não coletará mais endereços. Tem certeza de que deseja excluir o catálogo selecionado?
+confirmDeleteContact=Tem certeza de que deseja excluir o contato selecionado?
+confirmDeleteContacts=Tem certeza de que deseja excluir os contatos selecionados?
 confirmDeleteMailingList=Tem certeza de que deseja excluir a lista de emails selecionada?
 confirmDeleteListsAndContacts=Tem certeza de que deseja excluir os contatos e listas de emails selecionados?
 confirmDeleteMailingLists=Tem certeza de que deseja excluir as listas de emails selecionadas?
