--- a/pt-BR/suite/chrome/mailnews/messenger.properties
+++ b/pt-BR/suite/chrome/mailnews/messenger.properties
@@ -111,6 +111,8 @@ smtpServers-confirmServerDeletion=Tem certeza de que deseja excluir o servidor: 
 
 # Account Settings - Both Incoming and SMTP server
 authOld=Senha, método original (inseguro)
+authPasswordCleartextInsecurely=Senha, transmitida de forma insegura
+authPasswordCleartextViaSSL=Senha normal
 authPasswordEncrypted=Senha criptografada
 authKerberos=Kerberos / GSSAPI
 authExternal=Certificado TLS
@@ -336,7 +338,9 @@ confirmViewDeleteTitle=Confirmar
 confirmViewDeleteMessage=Tem certeza de que deseja excluir este modo de visualização?
 
 # for virtual folders
+confirmSavedSearchDeleteTitle=Excluir pasta de pesquisa
 confirmSavedSearchDeleteMessage=Tem certeza de que deseja excluir esta pasta de pesquisa?
+confirmSavedSearchDeleteButton=E&xcluir pasta de pesquisa
 
 ## @name ENTER_PASSWORD_PROMPT
 ## @loc None
@@ -353,6 +357,7 @@ passwordTitle=Senha do servidor de mensagens
 openWindowWarningTitle=Confirmar
 # LOCALIZATION NOTE (openWindowWarningConfirmation): Semi-colon list of plural forms.
 # #1 is the number of messages the user is attempting to open.
+openWindowWarningConfirmation=A abertura desta mensagem pode ser lenta.  Continuar?;A abertura de #1 mensagens pode ser lenta.  Continuar?
 
 # for warning the user that a tag he's trying to create already exists
 tagExists=Um rótulo com esse nome já existe.
@@ -370,6 +375,9 @@ alertNoSearchFoldersSelected=A pasta de pesquisa precisa de pelo menos uma pasta
 
 # These are displayed in the message and folder pane windows
 # LOCALIZATION NOTE %.*f is the abbreviated size in the appropriate units
+byteAbbreviation2=%.*f bytes
+kiloByteAbbreviation2=%.*f KB
+megaByteAbbreviation2=%.*f MB
 
 # Error message if message for a message id wasn't found
 errorOpenMessageForMessageIdTitle=Erro ao abrir messagem-ID
@@ -412,13 +420,33 @@ fileNotFoundMsg = O arquivo %S não existe.
 confirmMsgDelete.title=Confirmar exclusão
 confirmMsgDelete.collapsed.desc=Isso excluirá todas as mensagens agrupadas em tópicos. Tem certeza de que deseja continuar?
 confirmMsgDelete.deleteNoTrash.desc=Isto excluirá as mensagens imediatamente, sem salvar uma cópia na lixeira. Tem certeza que deseja continuar?
+confirmMsgDelete.delete.label=Excluir
 
+mailServerLoginFailedTitle=Falha na autenticação
 # LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
 # translation where you wish to display the hostname of the server to which
 # login failed.
+mailServerLoginFailed=Falha na identificação do usuário no servidor %S.
+mailServerLoginFailedRetryButton=Tenta&r novamente
+mailServerLoginFailedEnterNewPasswordButton=Digit&e a nova senha
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
+junkBarMessage=O %S marcou esta mensagem como spam.
+junkBarButton=Não é spam
+junkBarButtonKey=N
+junkBarInfoButton=?
 # LOCALIZATION NOTE (remoteContentBarMessage): %S is the brandname
+remoteContentBarMessage=Para proteger sua privacidade, o %S bloqueou o conteúdo externo desta mensagem.
+remoteContentBarButton=Exibir conteúdo externo
+remoteContentBarButtonKey=S
 # LOCALIZATION NOTE (phishingBarMessage): %S is the brandname
+phishingBarMessage=O %S marcou esta mensagem como fraudulenta.
+phishingBarIgnoreButton=Ignorar aviso
+phishingBarIgnoreButtonKey=I
+mdnBarMessage=O remetente desta mensagem deseja ser notificado quando você a ler. Você deseja notificar o remetente?
+mdnBarIgnoreButton=Ignorar solicitação
+mdnBarIgnoreButtonKey=I
+mdnBarSendReqButton=Enviar confirmação
+mdnBarSendReqButtonKey=S
 # LOCALIZATION NOTE (saveAsType): replace %S with the extension of the file to be saved.
 saveAsType=arquivo %S
