--- a/pt-BR/suite/chrome/mailnews/news.properties
+++ b/pt-BR/suite/chrome/mailnews/news.properties
@@ -12,19 +12,24 @@ removeExpiredArtLinkText=Clique aqui para excluir todos os artigos fora da valid
 cancelDisallowed=Esta mensagem não aparenta ser sua. Você pode cancelar suas mensagens, mas não aquelas enviadas por outros.
 cancelConfirm=Você confirma o cancelamento desta mensagem?
 messageCancelled=Mensagem cancelada.
+enterUserPassTitle=Solicitado nome de usuário e senha do servidor de news
 # LOCALIZATION NOTE (enterUserPassServer): %S is the server being accessed
+enterUserPassServer=Por favor digite o nome de usuário e a senha para %S:
 # LOCALIZATION NOTE (enterUserPassGroup): %1$S is a specific newsgroup to set
 # the password for; %2$S is the server from which the newsgroup is accessed
+enterUserPassGroup=Por favor digite o nome de usuário e a senha para %1$S em %2$S:
 okButtonText=OK
 
 noNewMessages=Não há novas mensagens no servidor
 # LOCALIZATION NOTE (newNewsgroupHeaders): %1$S is the number of the current
 # header being downloaded, %2$S is the number of headers to be downloaded, and
 # %3$S is the newsgroup whose headers are being downloaded.
+newNewsgroupHeaders=Baixando %1$S de %2$S cabeçalhos em %3$S
 # LOCALIZATION NOTE (newNewsgroupFilteringHeaders): %1$S is the name of the MIME
 # header being filtered on, %2$S is the number of the current header being
 # downloaded, %3$S is the number of headers to be downloaded, and %4$S is the
 # newsgroup whose headers are being downloaded.
+newNewsgroupFilteringHeaders=Obtendo cabeçalhos para filtros: %1$S (%2$S/%3$S) em %4$S
 downloadingArticles=Recebendo o artigo %S/%S...
 bytesReceived=Recebendo os newsgroups: %S recebidos (%SK lidos em %SKB/s)
 downloadingArticlesForOffline=Recebendo o artigo %S/%S em %S...
