--- a/pt-BR/suite/chrome/mailnews/search-attributes.properties
+++ b/pt-BR/suite/chrome/mailnews/search-attributes.properties
@@ -5,10 +5,15 @@
 #these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
 #and nsMsgSearchAttribMap in nsMsgSearchAdapter.cpp
 Subject=Assunto
+From=De
+Body=Corpo
 Date=Data
 Priority=Prioridade
 To=Para
 Cc=CC
+ToOrCc=Para ou Cc
+AgeInDays=Idade em dias
+SizeKB=Tamanho (KB)
 # for AB and LDAP
 DisplayName=Apresentar como
 Nickname=Apelido
@@ -26,6 +31,9 @@ Organization=Empresa
 Department=Setor
 # more mailnews
 FromToCcOrBcc=De, Para, Cc ou Cco
+JunkPercent=Percentual de spam
+AttachmentStatus=Existência de anexos
 JunkStatus=Spam
 Label=Rótulo
 Customize=Personalizar…
+MissingCustomTerm=Termo personalizado ausente
