--- a/pt-BR/suite/chrome/mailnews/search.properties
+++ b/pt-BR/suite/chrome/mailnews/search.properties
@@ -17,6 +17,7 @@
 # filter stuff
 searchingMessage=Pesquisando...
 # LOCALIZATION NOTE (matchesFound): #1 number of matches found
+matchesFound=#1 item encontrado;#1 itens encontrados
 noMatchesFound=Nenhum contato encontrado
 labelForStopButton=Parar
 labelForSearchButton=Pesquisar
