--- a/pt-BR/suite/chrome/mailnews/mime.properties
+++ b/pt-BR/suite/chrome/mailnews/mime.properties
@@ -133,19 +133,24 @@
 # Partial Message Truncated
 ## @name MIME_MSG_PARTIAL_TRUNCATED
 ## @loc
+MIME_MSG_PARTIAL_TRUNCATED=Mensagem recebida parcialmente!
 
 # Partial Message Truncated Explanation
 ## @name MIME_MSG_PARTIAL_TRUNCATED_EXPLANATION
 ## @loc
+MIME_MSG_PARTIAL_TRUNCATED_EXPLANATION=O tamanho da mensagem excede o limite definido nas opções desta conta. Somente as primeiras linhas foram recebidas do servidor de mensagens.
 
 # Partial Message Not Downloaded
 ## @name MIME_MSG_PARTIAL_NOT_DOWNLOADED
 ## @loc
+MIME_MSG_PARTIAL_NOT_DOWNLOADED=Não baixado
 
 # Partial Message Not Downloaded Explanation
 ## @name MIME_MSG_PARTIAL_NOT_DOWNLOADED_EXPLANATION
 ## @loc
+MIME_MSG_PARTIAL_NOT_DOWNLOADED_EXPLANATION=Somente os cabeçalhos desta mensagem foram recebidos do servidor de mensagens.
 
 # MIME_MSG_PARTIAL_CLICK_FOR_REST
 ## @name MIME_MSG_PARTIAL_CLICK_FOR_REST
 ## @loc
+MIME_MSG_PARTIAL_CLICK_FOR_REST=Receber a mensagem completa.
