--- a/pt-BR/suite/chrome/mailnews/pgpmime.properties
+++ b/pt-BR/suite/chrome/mailnews/pgpmime.properties
@@ -8,5 +8,6 @@
 
 # LOCALIZATION NOTE(pgpMimeNeedsAddon): The text can contain HTML tags.
 # %S is the url to Enigmail on AMO supplied from preferences.
+pgpMimeNeedsAddon=Esta é uma mensagem OpenPGP criptografada.<br>Para decodificá-la, você precisa instalar um <a href="%S">complemento OpenPGP</a>.
 
 
