--- a/pt-BR/suite/chrome/mailnews/subscribe.properties
+++ b/pt-BR/suite/chrome/mailnews/subscribe.properties
@@ -3,4 +3,6 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 columnHeader-nntp=Nome do grupo de notícias
 columnHeader-imap=Nome da pasta
+currentListTab-imap.label=Lista de pastas
+currentListTab-imap.accesskey=L
 pleaseWaitString=Por favor aguarde...
