--- a/sk/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/sk/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -249,6 +249,9 @@ copyMessageStart=Správa sa kopíruje do priečinka %S…
 copyMessageComplete=Kopírovanie dokončené
 copyMessageFailed=Kopírovanie zlyhalo
 
+filterMessageComplete=Filtrovanie dokončené.
+filterMessageFailed=Filtrovanie zlyhalo.
+
 ## LOCALIZATION NOTE (largeMessageSendWarning):
 ## Do not translate %S. It is the size of the message in user-friendly notation.
 largeMessageSendWarning=Pozor! Chystáte sa odoslať správu s veľkosťou %S, ktorá môže prekročiť povolený limit poštového servera. Naozaj chcete pokračovať?
@@ -299,3 +302,5 @@ smtpEnterPasswordPromptTitle=Vyžadované heslo k serveru SMTP
 ## LOCALIZATION NOTE(errorSavingMsg): Do not translate the word %S. It
 ## will be replaced with the name of the folder the message is being saved to.
 errorSavingMsg=Pri ukladaní správy do priečinka %S sa vyskytla chyba. Skúsiť znova?
+
+errorFilteringMsg=Vaša správa bola odoslaná a uložená, ale pri spúšťaní filtrov na tejto správe sa vyskytla chyba.
