[hu] update from Pootle (seamonkey)

--- a/hu/suite/chrome/common/notification.properties
+++ b/hu/suite/chrome/common/notification.properties
@@ -183,7 +183,7 @@ MixedActiveContentMessage=Egy titkosított oldalra fog érni, amely nem titkosí
 TrackingContentMessage=Az oldal felhasználói aktivitás követésére alkalmas elemeket tartalmazhat.
 MixedDisplayContentMessage=Egy titkosított oldalra fog érni, amely részben titkosított elemeket tartalmaz, így nem nem véd meg a lehallgatástól.
 BlockedActiveContentMessage=Az oldalon lévő nem biztonságos elemeket le lettek tiltva.
-BlockedTrackingContentMessage=Az oldalon lévő felhasználói aktivitás követésére alkalmas elemei le lettek tiltva.
+BlockedTrackingContentMessage=Az oldalon lévő felhasználói aktivitás követésére alkalmas elemek le lettek tiltva.
 BlockedDisplayContentMessage=Az oldalon lévő nem titkosított elemeket le lettek tiltva.
 EnterInsecureMessage=Egy titkosított oldal elhagyására készül. Azokat az információkat, amiket mostantól küld, könnyen olvashatja egy harmadik személy.
 EnterSecureMessage=Egy titkosított oldalra fog érni. A weboldal azonosítása megtörtént, és az ezután megjelenő, illetve Ön által beírt információ nehezen hozzáférhető harmadik fél számára.
