[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/permissions/permissionsManager.properties
+++ b/pt-BR/suite/chrome/common/permissions/permissionsManager.properties
@@ -11,6 +11,7 @@ popuppermissionshelp=pop_up_blocking
 imagepermissionstext=Especifique os sites que podem ou não carregar imagens. Forneça o endereço exato do site e clique em Bloquear ou Permitir.
 imagepermissionstitle=Exceções - Imagens
 imagepermissionshelp=images-help-managing
+offline-apppermissionstitle=Dados offline
 
 can=Permitir
 canSession=Permitir na sessão
