--- a/pt-BR/suite/chrome/mailnews/messenger.properties
+++ b/pt-BR/suite/chrome/mailnews/messenger.properties
@@ -59,12 +59,15 @@ sendingUnsent=Enviando mensagens da pasta "Saída"
 
 folderExists=Uma pasta com esse nome já existe. Por favor forneça um nome diferente.
 # LOCALIZATION NOTE(confirmDuplicateFolderRename): %1$S is name of folder being moved, %2$S is parent folder name, %3$S is proposed new folder name
+confirmDuplicateFolderRename=Uma subpasta com o nome '%1$S' já existe na pasta '%2$S'. Você deseja mover esta pasta usando o nome '%3$S'?
 folderCreationFailed=A pasta não foi criada porque o nome da pasta contém um caracter inválido. Por favor forneça um nome diferente e tente de novo.
 
 compactingFolder=Otimizando a pasta "%S"...
 # LOCALIZATION NOTE(compactingDone): %1$S is the compaction gain.
+compactingDone=Compactação concluída (aproximadamente %1$S salvos)
 autoCompactAllFoldersTitle=Otimizar pastas
 # LOCALIZATION NOTE(autoCompactAllFoldersText): %1$S is the compaction gain.
+autoCompactAllFoldersText=Você deseja compactar todas as pastas locais e offline para liberar espaço em disco? Isto irá liberar cerca de %1$S.
 autoCompactAlwaysAskCheckbox=Sempre perguntar antes de otimizar pastas automaticamente
 compactNowButton=Otimizar &agora
 
@@ -77,6 +80,7 @@ deletingMsgsFailed=Não é possível excluir mensagens da pasta %S porque ela es
 alertFilterCheckbox=Não me avise novamente
 compactFolderDeniedLock=A pasta "%S" não pôde ser otimizada porque outra operação está em andamento. Por favor tente novamente depois.
 compactFolderWriteFailed=A pasta "%S" não pôde ser otimizada porque não foi possível escrever na pasta. Verifique se há espaço em disco suficiente, se você possui privilégios de escrita do sistema de arquivos e tente novamente.
+filterFolderHdrAddFailed=As mensagens não foram filtradas para a pasta '%S' porque a adição de uma mensagem a ela falhou. Verifique se a pasta está sendo exibida corretamente ou então tente repará-la a partir das suas propriedades.
 filterFolderWriteFailed=As mensagens não puderam ser filtradas para a pasta "%S" porque houve falha de escrita na pasta. Verifique se há espaço suficiente em disco, se você possui os privilégios do sistema operacional necessários e tente novamente.
 copyMsgWriteFailed=As mensagens não puderam ser movidas ou copiadas para a pasta '%S' porque não foi possível escrever na pasta. Para conseguir espaço em disco, abra o menu "Arquivo", primeiro selecione "Esvaziar lixeira", e depois "Otimizar pastas" e tente novamente.
 cantMoveMsgWOBodyOffline=Ao trabalhar no modo desconectado não é possível mover ou copiar mensagens que não foram baixadas. Na janela principal, abra o menu Arquivo, desmarque a opção "Modo desconectado" e tente novamente.
@@ -110,6 +114,7 @@ smtpServers-confirmServerDeletionTitle=Excluir servidor
 smtpServers-confirmServerDeletion=Tem certeza de que deseja excluir o servidor: \n %S?
 
 # Account Settings - Both Incoming and SMTP server
+authNo=Sem autenticação
 authOld=Senha, método original (inseguro)
 authPasswordCleartextInsecurely=Senha, transmitida de forma insegura
 authPasswordCleartextViaSSL=Senha normal
@@ -378,6 +383,7 @@ alertNoSearchFoldersSelected=A pasta de pesquisa precisa de pelo menos uma pasta
 byteAbbreviation2=%.*f bytes
 kiloByteAbbreviation2=%.*f KB
 megaByteAbbreviation2=%.*f MB
+gigaByteAbbreviation2=%.*f GB
 
 # Error message if message for a message id wasn't found
 errorOpenMessageForMessageIdTitle=Erro ao abrir messagem-ID
@@ -393,7 +399,9 @@ confirmPhishingUrl2=O %1$S acha que este site é suspeito! Ele pode estar se faz
 alwaysLoadRemoteContentForSender=Clique aqui para sempre carregar imagens externas de %1$S
 
 #LOCALIZATION NOTE(mdnBarMessageNormal) %1$S is the name of the sender
+mdnBarMessageNormal=%1$S solicitou ser notificado assim que você lesse esta mensagem.
 #LOCALIZATION NOTE(mdnBarMessageAddressDiffers) %1$S is the name of the sender, %2$S is the address(es) to send return receipt to
+mdnBarMessageAddressDiffers=%1$S solicitou ser notificado em %2$S assim que você lesse esta mensagem.
 
 # mailCommands.js
 emptyJunkTitle=Confirmar
@@ -420,6 +428,7 @@ fileNotFoundMsg = O arquivo %S não existe.
 confirmMsgDelete.title=Confirmar exclusão
 confirmMsgDelete.collapsed.desc=Isso excluirá todas as mensagens agrupadas em tópicos. Tem certeza de que deseja continuar?
 confirmMsgDelete.deleteNoTrash.desc=Isto excluirá as mensagens imediatamente, sem salvar uma cópia na lixeira. Tem certeza que deseja continuar?
+confirmMsgDelete.dontAsk.label=Não perguntar novamente.
 confirmMsgDelete.delete.label=Excluir
 
 mailServerLoginFailedTitle=Falha na autenticação
@@ -435,6 +444,7 @@ junkBarMessage=O %S marcou esta mensagem como spam.
 junkBarButton=Não é spam
 junkBarButtonKey=N
 junkBarInfoButton=?
+junkBarInfoButtonKey=?
 # LOCALIZATION NOTE (remoteContentBarMessage): %S is the brandname
 remoteContentBarMessage=Para proteger sua privacidade, o %S bloqueou o conteúdo externo desta mensagem.
 remoteContentBarButton=Exibir conteúdo externo
