--- a/pt-BR/suite/chrome/mailnews/search-attributes.properties
+++ b/pt-BR/suite/chrome/mailnews/search-attributes.properties
@@ -14,9 +14,13 @@ Cc=CC
 ToOrCc=Para ou Cc
 AgeInDays=Idade em dias
 SizeKB=Tamanho (KB)
+Tags=Rótulos
 # for AB and LDAP
+AnyName=Qualquer nome
 DisplayName=Apresentar como
 Nickname=Apelido
+ScreenName=Nome de tela
+Email=E-mail
 AdditionalEmail=Email alternativo
 AnyNumber=Qualquer número
 WorkPhone=Telefone comercial
@@ -31,6 +35,7 @@ Organization=Empresa
 Department=Setor
 # more mailnews
 FromToCcOrBcc=De, Para, Cc ou Cco
+JunkScoreOrigin=Origem da pontuação de spam
 JunkPercent=Percentual de spam
 AttachmentStatus=Existência de anexos
 JunkStatus=Spam
