--- a/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
+++ b/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
@@ -21,3 +21,5 @@ deleteAllCookiesSites=Tem certeza de que deseja excluir todos os sites de cookie
 deleteAllSitesTitle=Excluir sites
 deleteAllSitesYes=&Excluir
 deleteSelectedCookies=Tem certeza de que deseja excluir os cookies selecionados?
+deleteSelectedCookiesTitle=Remover cookies selecionados
+deleteSelectedSitesTitle=Remover websites selecionados
