--- a/pt-BR/suite/chrome/common/places/places.properties
+++ b/pt-BR/suite/chrome/common/places/places.properties
@@ -5,13 +5,34 @@
 load-js-data-url-error=Por razões de segurança, URLs "javascript:" e "data:" não podem ser carregadas a partir da janela ou do painel de histórico.
 noTitle=(sem título)
 
+bookmarksMenuEmptyFolder=(Vazio)
+
+bookmarksBackupTitle=Nome do arquivo de backup dos favoritos
+
+bookmarksRestoreAlertTitle=Reverter favoritos
+bookmarksRestoreAlert=Isso irá substituir todos os seus favoritos atuais pelo backup. Tem certeza disso?
+bookmarksRestoreTitle=Selecionar um backup de favoritos
+bookmarksRestoreFilterName=JSON
+bookmarksRestoreFilterExtension=*.json
+
+bookmarksRestoreFormatError=Tipo de arquivo não suportado.
+bookmarksRestoreParseError=Não foi possível processar o arquivo de backup.
 
 
+menuOpenLivemarkOrigin.label=Abrir "%S"
 
+view.sortBy.title.label=Ordenar por nome
+view.sortBy.title.accesskey=n
+view.sortBy.url.label=Ordenar por localização
+view.sortBy.url.accesskey=l
+view.sortBy.date.label=Ordenar por data de visita
+view.sortBy.date.accesskey=v
+view.sortBy.description.label=Ordenar por descrição
+view.sortBy.description.accesskey=d
 
-
-
-
+searchBookmarks=Pesquisar nos favoritos
+searchCurrentDefault=Pesquisar em '%S'
+findInPrefix=Localizar em '%S'…
 
 tabs.openWarningTitle=Confirmar abertura
 tabs.openWarningMultipleBranded=Você está prestes a abrir %S abas.  Isto pode deixar o %S lento enquanto as páginas carregam. Tem certeza de que deseja continuar?
@@ -20,8 +41,14 @@ tabs.openWarningPromptMeBranded=Avisar quando a abertura de várias abas puder d
 
 
 saveSearch.inputLabel=Nome:
+saveSearch.inputDefaultText=Nova pesquisa
 
+detailsPane.noItems=Nenhum item
+detailsPane.oneItem=Um item
+detailsPane.multipleItems=%S itens
 
+recentTagsTitle=Rótulos recentes
 
 OrganizerQueryHistory=Histórico
+OrganizerQueryAllBookmarks=Todos os favoritos
 OrganizerQueryTags=Rótulos
