--- a/pt-BR/suite/chrome/mailnews/appleMailImportMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/appleMailImportMsgs.properties
@@ -6,11 +6,15 @@
 ApplemailImportName=Apple Mail
 
 # Description of import module
+ApplemailImportDescription=Importar mensagens locais do Mac OS X Mail
 
 # Success Message
 # LOCALIZATION NOTE(ApplemailImportMailboxSuccess): Do not translate the word "%S" below.
+ApplemailImportMailboxSuccess=As mensagens locais foram importadas de %S com sucesso
 
 # Error Message
+ApplemailImportMailboxBadparam=Um erro interno ocorreu. A importação falhou. Tente importar novamente.
 
 # Error message
 # LOCALIZATION NOTE(ApplemailImportMailboxConverterror): Do not translate the word "%S" below.
+ApplemailImportMailboxConverterror=Um erro ocorreu ao importar mensagens de %S. As mensagens não foram importadas.
