[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/mailnews/messenger.properties
+++ b/pt-BR/suite/chrome/mailnews/messenger.properties
@@ -417,6 +417,7 @@ processingJunkMessages=Processando mensagens de spam
 
 # tabmail: warning when closing multiple tabs (as in browser)
 tabs.closeWarningTitle=Fechar janela
+tabs.closeWarning=Esta janela possui %S abas abertas. Deseja fechá-las?
 tabs.closeButton=Fechar
 tabs.closeWarningPromptMe=Alerte-me ao fechar várias abas.
 
