--- a/pt-BR/suite/chrome/mailnews/gloda.properties
+++ b/pt-BR/suite/chrome/mailnews/gloda.properties
@@ -20,15 +20,22 @@
 
 # LOCALIZATION NOTE (gloda.message.attr.folder.*): Stores the message folder in
 #  which the message is stored.
+gloda.message.attr.folder.facetLabel=Pasta de mensagens
 
 # LOCALIZATION NOTE (gloda.message.attr.fromMe.*): Stores everyone involved
 #  with the message.  This means from/to/cc/bcc.
+gloda.message.attr.fromMe.facetLabel=De mim
 
 # LOCALIZATION NOTE (gloda.message.attr.toMe.*): Stores everyone involved
 #  with the message.  This means from/to/cc/bcc.
+gloda.message.attr.toMe.facetLabel=Para mim
 
 # LOCALIZATION NOTE (gloda.message.attr.involves.*): Stores everyone involved
 #  with the message.  This means from/to/cc/bcc.
+gloda.message.attr.involves.facetLabel=Pessoas
+gloda.message.attr.involves.includeLabel=envolvendo qualquer uma destas pessoas:
+gloda.message.attr.involves.excludeLabel=não envolvendo:
+gloda.message.attr.involves.remainderLabel=outros participantes:
 
 # LOCALIZATION NOTE (gloda.message.attr.date.*): Stores the date of the message.
 #  SeaMonkey normally stores the date the message claims it was composed
@@ -50,12 +57,14 @@ gloda.message.attr.attachmentTypes.facetLabel=Anexos
 #  the mailing list and only be detected in messages received from the mailing
 #  list.  Extensions may contribute additional detected mailing-list-like
 #  things.
+gloda.message.attr.mailing-list.facetLabel=Listas de mensagens envolvidas
 
 # LOCALIZATION NOTE (gloda.message.attr.tag.*): Stores the tags applied to the
 #  message.  Notably, gmail's labels are not currently exposed via IMAP and we
 #  do not do anything clever with gmail, so this is indepdendent of gmail
 #  labels.  This may change in the future, but it's a safe bet it's not
 #  happening on SeaMonkey's side prior to 2.0.
+gloda.message.attr.tag.facetLabel=Rótulos
 
 # LOCALIZATION NOTE (gloda.message.attr.star.*): Stores whether the message is
 #  flagged or not, as indicated by a pretty flag icon.
@@ -81,12 +90,15 @@ gloda.message.attr.forwarded.facetLabel=Encaminhada
 # LOCALIZATION NOTE (gloda.mimetype.category.archives.label): Archive is
 #  referring to things like zip files, tar files, tar.gz files, etc.
 gloda.mimetype.category.archives.label=Arquivos
+gloda.mimetype.category.documents.label=Documentos
 gloda.mimetype.category.images.label=Imagens
 # LOCALIZATION NOTE (gloda.mimetype.category.media.label): Media is meant to
 #  encompass both audio and video.  This is because video and audio streams are
 #  frequently stored in the same type of container and we cannot rely on the
 #  sending e-mail client to have been clever enough to figure out what was
 #  really in the file.  So we group them together.
+gloda.mimetype.category.media.label=Mídia (áudio, vídeo)
+gloda.mimetype.category.pdf.label=Arquivos PDF
 # LOCALIZATION NOTE (gloda.mimetype.category.other.label): Other is the category
 #  for MIME types that we don't really know what it is.
 gloda.mimetype.category.other.label=Outros
